--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-glsl": "^2.13.0",
-    "parcel": "^2.13.0"
+    "@parcel/transformer-sass": "^2.13.0",
+    "parcel": "^2.13.0",
+    "sass": "^1.81.0"
   },
   "dependencies": {
-    "ogl": "^1.0.9"
+    "include-media": "^2.0.0",
+    "ogl": "^1.0.9",
+    "sass-migrator": "^2.2.1"
   }
 }
